--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Tarefas: só mais uma todo app</title>
+  <title>ARESTApp: A Really Simple Todo App</title>
 
   <base href="/" />
 
